[package]
name = "pshbullet_client"
version = "0.2.1"
authors = ["yasuhara <yasuhara@gmail.com>"]
repository = "https://bitbucket.org/yshryk/pshbullet-client"
documentation = "https://docs.rs/pshbullet_client/"
license = "MIT/Apache-2.0"
readme = "README.md"
description = """
Unofficial Pushbullet API client.
"""
keywords = ["push", "client"]
categories = ["api-bindings", "web-programming::http-client"]
exclude = [
    "*.iml",
    "*.yml",
    "*.json",
]

[badges]
appveyor = { repository = "yasuhara/pshbullet-client", branch = "default", service = "bitbucket" }

[dependencies]
log = "0.4"
chrono = "0.4"
reqwest = "0.8"
hyper = "0.11"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
lazy_static = "1.0"

[dev-dependencies]
simple_logger = "0.5"
dotenv = "0.12"
